# yolov8-onnx.cpp

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
include/: bounding_box.hpp  image_utils.hpp  yolo_utils.hpp
python_scripts/: 0_download_model.py  1_modify_onnx.py  2_export_npy.py  environment.yaml
sample/: people1_output.txt
src/: bounding_box.cpp  image_utils.cpp  main.cpp  yolo_utils.cpp
tests/: image_test.cpp  npy_test.cpp  onnx_test.cpp  op_test.cpp  session_test.cpp
tests/data/npy/: model.0.conv.bias.npy  model.0.conv.weight.npy  model.1.act.Mul_output_0.npy  model.1.act.Sigmoid_output_0.npy  model.1.conv.Conv_output_0.npy  model.1.conv.bias.npy  model.1.conv.weight.npy  model.10.Resize_output_0.npy  model.11.Concat_output_0.npy  model.12.Concat_output_0.npy  model.12.Split_output_0.npy  model.12.Split_output_1.npy  model.12.cv1.act.Mul_output_0.npy  model.12.cv1.act.Sigmoid_output_0.npy  model.12.cv1.conv.Conv_output_0.npy  model.12.cv1.conv.bias.npy  model.12.cv1.conv.weight.npy  model.12.cv2.act.Mul_output_0.npy  model.12.cv2.act.Sigmoid_output_0.npy  model.12.cv2.conv.Conv_output_0.npy  model.12.cv2.conv.bias.npy  model.12.cv2.conv.weight.npy  model.12.m.0.cv1.act.Mul_output_0.npy  model.12.m.0.cv1.act.Sigmoid_output_0.npy  model.12.m.0.cv1.conv.Conv_output_0.npy  model.12.m.0.cv1.conv.bias.npy  model.12.m.0.cv1.conv.weight.npy  model.12.m.0.cv2.act.Mul_output_0.npy  model.12.m.0.cv2.act.Sigmoid_output_0.npy  model.12.m.0.cv2.conv.Conv_output_0.npy  model.12.m.0.cv2.conv.bias.npy  model.12.m.0.cv2.conv.weight.npy  model.13.Resize_output_0.npy  model.15.Concat_output_0.npy  model.15.Split_output_0.npy  model.15.Split_output_1.npy  model.15.cv1.act.Mul_output_0.npy  model.15.cv1.act.Sigmoid_output_0.npy  model.15.cv1.conv.Conv_output_0.npy  model.15.cv1.conv.bias.npy  (+330 more)
